A bunch of things. Need to get the block and JEI working with this